css/style.css
body {
	background:#202020;
	font-family: Helvetica;
	padding-top:20px;
}

.title {
	color: white;
	font-size: 24pt;
}

.title a {
	color: white;
	text-decoration:none;
}

div.menu {
	margin-bottom:12px;
}

.menuitem {
	background:#CCC;
	padding:3px 12px;
	margin-right:6px;
}

.menuitem:hover {
	background:#AAA;
}

.menuitem a {
	text-decoration:none;
	color:black;
}

.activemenu {
	background:#444;
}
.activemenu a {
	color:white;
}

div.content {
	margin-top:3px;
	background:white;
	padding:12px;
}

table.notifications * {
	font-family:Arial,Helvetica;
}

table.notifications * a {
	text-decoration:none;
}

table.notifications th {
	background:#666;
	color:white;
}

.source {
	background:#ccc;
}

.notification {
	background:#eee;
}

.notification td:empty {
	background:white;
}

.announcement {
	background:#eee;
}

.announcement td:empty {
	background:white;
}

.running {
	background:#AAF;
}

.error {
	background:#F77;
}

.finished {
	background:#7F7;
}

.started {
	background:#eee;
}

.announced {
	background:#FF7;
}

.legend {
	border:1px solid black;
	float:right;
	padding:6px;
	margin:6px;
}

.legend span {
	margin:6px;
	padding:0 3px;
}

.clear {
	clear:both;
}

#mapCanvas {
	border:1px solid black;
	margin:6px;
	padding:6px;
}

